--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@
 }
 
 .banner-container{
-width: 100%;
-border-radius: 24px;
+    width: 1280px;
+    height: 560px;
 background: rgb(198, 228, 214);
 background-image: url("./assets/hero.png");
 }
