--- a/style.css
+++ b/style.css
@@ -1,36 +1,63 @@
-/* fira sans font */
-.open-sans-normal {
-  font-family: "Open Sans", serif;
-  font-optical-sizing: auto;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
-}
-
-
 *{
     margin: 0px;
     padding: 0px;
-    background-color: #F5F5F5;
 }
-nav{
+
+
+/* nav bar style */
+.navbar{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 10px;
 }
 
-.sign-btn{
-   padding: 10px 15px 10px 15px;
-   box-sizing: border-box;
-   font-weight: bold;
-   color: #006A50;
-   border: 1px solid rgb(0, 106, 80);
-   border-radius: 8px;
-   
+.sign{
+    padding: 15px 30px;
+    background-color: white;
+    border-color: 1px solid #006A50;
+    color: #006A50;
+    font-weight: bold;
+    border-radius: 10px;
 }
 
-#hero{
+/* banner style */
+.banner-container{
+    width: 100%;
+    height: 70vh;
+    background-color: #C6E4D6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 24px;
-
-background: rgb(198, 228, 214);
+    gap: 80;
+}
+.banner-content{
+    margin: 0px 64px;
+}
+.banner-title{
+    font-size: 24px;
+    font-weight: 500;
+    opacity: 50%;
+    text-align: left;
+    gap: 16;
+}
+.banner-header{
+    font-size: 56px;
+    font-weight: 700;
+    text-align: left;
+    gap: 16;
+}
+.explore{
+padding: 17px 34px;
+background-color: #006A50;
+color: #FFFFFF;
+border: none;
+border-radius: 10px;
+font-weight: bold;
+gap: 48;
+}
+.banner-img{
+    width: 474px;
+    margin: 0px 64px;
+    align-items: normal;
 }
