--- a/style.css
+++ b/style.css
@@ -1,17 +1,19 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
+    width: 1600;
+    height: 5300;
 }
 
 
 /* nav bar style */
-.navbar{
+.navbar {
     display: flex;
     justify-content: space-around;
     padding: 10px;
 }
 
-.sign{
+.sign {
     padding: 15px 30px;
     background-color: white;
     border-color: 1px solid #006A50;
@@ -21,43 +23,90 @@
 }
 
 /* banner style */
-.banner-container{
-    width: 100%;
-    height: 70vh;
+.banner-container {
+    width: 1280;
+    height: 560;
+    top: 120px;
     background-color: #C6E4D6;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 24px;
     gap: 80;
+    border-radius: 24px;
+    padding: 100px 80px;
+    margin-bottom: 80px;
 }
-.banner-content{
+
+.banner-content {
     margin: 0px 64px;
 }
-.banner-title{
+
+.banner-title {
     font-size: 24px;
     font-weight: 500;
     opacity: 50%;
     text-align: left;
     gap: 16;
 }
-.banner-header{
+
+.banner-header {
     font-size: 56px;
     font-weight: 700;
     text-align: left;
     gap: 16;
 }
-.explore{
-padding: 17px 34px;
-background-color: #006A50;
-color: #FFFFFF;
-border: none;
-border-radius: 10px;
-font-weight: bold;
-gap: 48;
+
+.explore {
+    padding: 17px 34px;
+    background-color: #006A50;
+    color: #FFFFFF;
+    border: none;
+    border-radius: 10px;
+    font-weight: bold;
+    gap: 48;
 }
-.banner-img{
+
+.banner-img {
     width: 474px;
     margin: 0px 64px;
     align-items: normal;
+}
+
+main {
+    margin: 0 auto;
+    padding: 10px;
+}
+
+.piller-head {
+    font-weight: bold;
+    text-align: left;
+}
+
+.pillar-box {
+    display: flex;
+    gap: 24px;
+    padding: 24px;
+    text-align: center;
+}
+
+.box-item {
+    gap: 12px;
+    padding: 30px;
+    box-shadow: 0px 4px 4px 0px rgb(0, 0, 0, 0.25);
+    border-radius: 16px;
+}
+.box-image{
+    width: 64px;
+    height: 64px;
+}
+.box-title {
+    font-weight: bold;
+    opacity: 80%;
+    text-align: left;
+}
+
+.box-description {
+    opacity: 70%;
+    line-height: 24px;
+    text-align: left;
 }
