--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
     gap: 80;
     border-radius: 24px;
     padding: 100px 80px;
-    margin-bottom: 80px;
+    /* margin-bottom: 80px; */
 }
 
 .banner-content {
@@ -75,6 +75,8 @@
 main {
     margin: 0 auto;
     padding: 10px;
+    margin-top: 80px;
+    margin-bottom: 80px;
 }
 
 .piller-head {
@@ -82,31 +84,68 @@ main {
     text-align: left;
 }
 
-.pillar-box {
+.box {
     display: flex;
     gap: 24px;
     padding: 24px;
-    text-align: center;
+    text-align: left;
 }
 
 .box-item {
     gap: 12px;
     padding: 30px;
-    box-shadow: 0px 4px 4px 0px rgb(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     border-radius: 16px;
 }
-.box-image{
-    width: 64px;
-    height: 64px;
-}
+
 .box-title {
     font-weight: bold;
     opacity: 80%;
-    text-align: left;
 }
 
 .box-description {
     opacity: 70%;
     line-height: 24px;
-    text-align: left;
+}
+
+.blue{
+    background-color: rgba(84, 144, 245, 0.2);
+}
+.blue-button{
+    padding: 20px 11px;
+    background-color: #5490F5;
+    color: #FFFFFF;
+    border: none;
+    border-radius: 10px;
+    font-weight: bold;
+    gap: 48;
+}
+.green{
+    background-color: rgba(198, 228, 214, 1);
+}
+.green-button{
+    padding: 20px 11px;
+    background-color: #09A15C;
+    color: #FFFFFF;
+    border: none;
+    border-radius: 10px;
+    font-weight: bold;
+    gap: 48;
+}
+.yellow{
+    background-color: rgba(247, 235, 207, 1);
+}
+.yellow-button{
+    padding: 20px 11px;
+    background-color: #FFC239;
+    color: #FFFFFF;
+    border: none;
+    border-radius: 10px;
+    font-weight: bold;
+    gap: 48;
+}
+
+.quotes {
+    background-image: url(./assets/quote-bg.png);
+    background-repeat: no-repeat;
 }
