--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 * {
     margin: 0px;
     padding: 0px;
-    width: 1600;
-    height: 5300;
+    /* justify-content: center; */
+    /* width: 1600;
+    height: 5300; */
+
 }
 
 
@@ -11,6 +13,8 @@
     display: flex;
     justify-content: space-around;
     padding: 10px;
+    width: 80%;
+
 }
 
 .sign {
@@ -24,21 +28,26 @@
 
 /* banner style */
 .banner-container {
-    width: 1280;
-    height: 560;
-    top: 120px;
+    width: 80%;
+    /* height: 560; */
+    /* top: 120px; */
     background-color: #C6E4D6;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 80;
+    /* gap: 80; */
     border-radius: 24px;
-    padding: 100px 80px;
+    /* padding: 100px 80px; */
     /* margin-bottom: 80px; */
+    padding: 32px;
+    margin: 32px;
+    /* gap: 24px; */
+}
 }
 
 .banner-content {
     margin: 0px 64px;
+
 }
 
 .banner-title {
@@ -75,11 +84,20 @@
 main {
     margin: 0 auto;
     padding: 10px;
-    margin-top: 80px;
-    margin-bottom: 80px;
+    width: 80%;
 }
 
-.piller-head {
+.pillars {
+    margin-top: 80px;
+    margin-bottom: 80px;
+    padding: 32px;
+    margin: 32px;
+    gap: 24px;
+    width: 1280px;
+}
+}
+
+.box-head {
     font-weight: bold;
     text-align: left;
 }
@@ -101,17 +119,32 @@ main {
 .box-title {
     font-weight: bold;
     opacity: 80%;
+    gap: 24px;
+    margin-bottom: 10px;
 }
 
 .box-description {
     opacity: 70%;
     line-height: 24px;
+    gap: 24px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
-.blue{
+.vision {
+    margin-top: 80px;
+    margin-bottom: 80px;
+    padding: 32px;
+    margin: 32px;
+    gap: 24px;
+    width: 1280px;
+}
+
+.blue {
     background-color: rgba(84, 144, 245, 0.2);
 }
-.blue-button{
+
+.blue-button {
     padding: 20px 11px;
     background-color: #5490F5;
     color: #FFFFFF;
@@ -120,10 +153,12 @@ main {
     font-weight: bold;
     gap: 48;
 }
-.green{
+
+.green {
     background-color: rgba(198, 228, 214, 1);
 }
-.green-button{
+
+.green-button {
     padding: 20px 11px;
     background-color: #09A15C;
     color: #FFFFFF;
@@ -132,10 +167,12 @@ main {
     font-weight: bold;
     gap: 48;
 }
-.yellow{
+
+.yellow {
     background-color: rgba(247, 235, 207, 1);
 }
-.yellow-button{
+
+.yellow-button {
     padding: 20px 11px;
     background-color: #FFC239;
     color: #FFFFFF;
@@ -148,4 +185,186 @@ main {
 .quotes {
     background-image: url(./assets/quote-bg.png);
     background-repeat: no-repeat;
+    padding: 32px;
+    margin: 32px;
+    gap: 24px;
+    width: 1280px;
+}
+
+.opinion-table {
+    margin-top: 80px;
+    margin-bottom: 80px;
+    padding: 32px;
+    margin: 32px;
+    gap: 24px;
+    width: 1280px;
+    justify-content: space-around;
+}
+
+table {
+    border-collapse: collapse;
+    gap: 24px;
+}
+
+th {
+    background-color: #C6E4D6;
+    text-align: left;
+}
+
+td,
+th {
+    border: 1px solid black;
+    padding: 24px;
+    font-weight: bold;
+}
+
+.selection {
+    padding: 14px 10px;
+    background-color: #C6E4D6;
+    color: #0E0E0E;
+    border: 1px solid black;
+    border-radius: 4px;
+    font-weight: bold;
+    gap: 12;
+}
+
+.news {
+    margin-top: 80px;
+    margin-bottom: 80px;
+    padding: 32px;
+    margin: 32px;
+    gap: 24px;
+    width: 1280px;
+}
+
+.box1 {
+    display: flex;
+    gap: 32px;
+    padding: 48px 48px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border-radius: 24px;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+}
+
+.box2 {
+    display: flex;
+    gap: 32px;
+    padding: 48px 48px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border-radius: 24px;
+    justify-content: flex-end;
+    /* align-items: center; */
+    text-align: left;
+}
+
+.button2 {
+    padding: 13px 26px;
+    background-color: #006A50;
+    color: #FFFFFF;
+    border: none;
+    border-radius: 8px;
+    font-weight: bold;
+    gap: 48;
+}
+
+.donate {
+    gap: 24px;
+    padding: 24px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.donate-box {
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    /* padding: 40px 40px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border-radius: 16px; */
+}
+
+.TK {
+    padding: 40px 40px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border-radius: 16px;
+}
+
+.two {
+    background-color: #C6E4D6;
+}
+
+.amount {
+    padding: 20px 40px;
+    gap: 24px;
+    width: 600px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    text-align: center;
+    color: rgba(14, 14, 14, 0.3);
+}
+
+.done {
+    padding: 17px 34px;
+    background-color: #006A50;
+    color: #FFFFFF;
+    border: none;
+    border-radius: 8px;
+    font-weight: bold;
+    gap: 48;
+}
+
+.newsletter {
+    margin-top: 80px;
+    margin-bottom: 80px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 32px;
+    padding: 48px 48px;
+    background-color: #C6E4D6;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border-radius: 24px;
+}
+
+.mail {
+    padding: 18px 40px;
+    background-color: white;
+    border: none;
+    border-radius: 10px;
+    font-weight: bold;
+    gap: 24;
+    width: 600px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.subs-btn {
+    padding: 18px 40px;
+    background-color: #006A50;
+    color: #FFFFFF;
+    border: none;
+    border-radius: 10px;
+    font-weight: bold;
+    gap: 48;
+}
+
+footer {
+    margin-bottom: 80px;
+    /* justify-content: center;
+    align-items: center; */
+    text-align: center;
+    gap: 24px;
+    padding: 24px;
+}
+
+.social-icon {
+    gap: 23px;
+    padding: 0px 0px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
